src/Umbrella.Ui/ClientApp/src/custom.css
:root {
    --super-dark: #101010;
    --background: #222222;
    --widget-background: #292929;
    --swimlane-background: #333333;
    --error-background: #660000;
    --text-color: #cccccc;
    --divider-color: #444444;
}

body {
    background-color: var(--background);
    color: var(--text-color);
}

h1.swimlane {
    background-color: var(--swimlane-background);
    border-radius: 4px;
    box-shadow: 0px 1px 1px var(--super-dark);
    padding: 0.4em 0.8em;
    font-size: 1.3em;
    font-weight: normal;
    margin-bottom: 0.5em;
}

.widget {
    background-color: var(--widget-background);
    box-shadow: 0px 1px 1px var(--super-dark);
    border-radius: 4px;
    margin-bottom: 0.7em;
}

.row {
    padding-left: calc(var(--bs-gutter-x) * .5);
}

.row > * {
    padding-left: 0;
}

.modal-content {
    background-color: var(--widget-background);
}

.modal-header, .modal-footer {
    border-color: var(--divider-color);
}

.table-dark {
    color: var(--text-color);
    border-color: var(--divider-color);
    --bs-table-bg: var(--background);
    --bs-table-hover-bg: var(--super-dark);
}

th {
    background-color: var(--swimlane-background) !important;
}

.table > :not(:first-child) {
    border-top: 2px solid var(--divider-color);
}

.alert-danger {
    background-color: var(--error-background);
    border: none;
    color: var(--text-color);
}


/* Provide sufficient contrast against white background */
a {
    color: #0366d6;
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

code {
    color: #E01A76;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

/*.container {
    margin: 0;
    max-width: 100%;
}*/
/* ----------------------------------- */

